--- a/index.html
+++ b/index.html
@@ -6,24 +6,8 @@ title: eRegulations
 {% capture intro %}{% include intro.md %}{% endcapture %}
 {{ intro | markdownify }}
 
-{% if site.repos %}
-<section id="repositories">
-  <h2 id="repositories">Repositories</h2>
-  <ul class="repo-list group">
-    <li class="list-icon">
-      <img src="assets/img/octocat.png" width="25px" alt="">
-    </li>
-    {% for repo in site.repos %}
-      <li>
-        <a href="{{ repo.url }}">
-          <h4>{{ repo.name }}</h4>
-          <p>{{ repo.description }}</p>
-        </a>
-      </li>
-    {% endfor %}
-  </ul>
-</section>
-{% endif %}
+{% capture repos %}{% include repos.md %}{% endcapture %}
+{{ repos | markdownify }}
 
 {% capture index %}{% include index.md %}{% endcapture %}
 {{ index | markdownify }}
