Add "Live Instances" section to home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-subtemplates: [intro, repos, index]
+subtemplates: [intro, instances, repos, index]
 ---
 
 {% for subtemplate in page.subtemplates %}
